--- a/05-var-let-const.html
+++ b/05-var-let-const.html
@@ -15,6 +15,46 @@
 
         console.log(x,ş);
 
+
+        let enBuyuktamSayi=Number.MIN_SAFE_INTEGER;
+        console.log(enBuyuktamSayi);
+
+        var testTS=2854486351584845422515451651654642n;
+        console.log(testTS+5n == testTS+6n);
+
+
+        //console.log(enBuyuktamSayi-5==enBuyuktamSayi-5)
+        var tanimsiz;
+        console.log(tanimsiz);
+
+       
+      //------------------
+var adi="Ali";
+var mezun=true;
+
+console.log(x);
+console.log(typeof(x));
+console.log(typeof(ş));
+ console.log(typeof(enBuyuktamSayi));
+ console.log(typeof(tanimsiz));
+ console.log(typeof(mezun));
+ console.log(typeof(adi));
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </script>
 </body>
 </html>
