--- a/08-aritmetik-operatorler.html
+++ b/08-aritmetik-operatorler.html
@@ -8,12 +8,20 @@
 </head>
 <body>
     
-
-
     <script>
-        alert("Kullanici adinizi boş birakmayiniz.");
-        confirm("Silmek istediğinziden emin misiniz?");
-        prompt("Adinizi girin");
+        let a=5, b=++a;
+        
+        a+=10;
+
+        console.log(a,b);
+
+
+        let z = 3;
+        let k  = z++;
+
+        console.log(k,z);
+
+
     </script>
 </body>
 </html>
