--- a/12-dom-3.html
+++ b/12-dom-3.html
@@ -1,48 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+    <style>
+      .red {
+        background-color: red;
+      }
+
+      .blue {
+        background-color: blue;
+      }
+    </style>
+  </head>
+  <body>
+    <h1 id="baslik" onclick="sayHello()" class="blue">Javascript</h1>
+
+    <script>
+      function sayHello() {
+        alert("Hello World");
+      }
+
     
-
-    <input type="number"  id="txtSayi1">
-    <input type="number" id="txtSayi2">
-    <button id="btnTopla" onclick="topla()" >Topla</button>
-
-    <div id="lblsonuc" ></div>
-
-<script>
-function topla(){
-
-let sayi1=document.querySelector("#txtSayi1").value;
-let sayi2=document.querySelector("#txtSayi2").value;
-
-let sonuc=Number(sayi1)+Number(sayi2);
-
-
-document.querySelector("#lblsonuc").innerHTML = ` Sonuc = <b>${sonuc}</b>`;
-
-
-}
-
-
-</script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-</body>
+    </script>
+  </body>
 </html>
