--- a/26-hg.html
+++ b/26-hg.html
@@ -22,12 +22,12 @@
 
 function uygula() {
 
-    girilen = parseInt (document.getElementById("#indirimorani").value);
-         mal= parseInt (document.getElementById("#indirim1").value);
-   sonhal.value =parseInt(girilen)-parseInt(mal);
+         girilen = parseInt (document.getElementById('#indirimorani').value);
+         mal= parseInt (document.getElementById('#indirim1').value);
+         sonhal.value =parseInt(girilen)-parseInt(mal);
 }
 
-
+uygula();
 
 
 
